# voice-claude

./: .gitignore  README.md  credential-discovery-spec.md  install.cmd  install.ps1  install.sh  pyproject.toml  requirements.txt  voice-claude.bat  voice-claude.ps1
src/: __init__.py  agent.py  api_client.py  audio.py  claude_pty.py  main.py  transcribe.py
